Update on style and  images

--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Simply Revived</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>About Us | Simply Revived</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
 
@@ -23,10 +22,37 @@
   </nav>
 </header>
 
-<section>
+<section class="page-intro">
   <h2>About Simply Revived</h2>
-  <p>Simply Revived began as a small neighborhood bookstore with a mission to rekindle the love of reading. Over time, it has grown into a welcoming space offering a curated selection of books for all ages.</p>
-  <p>We also offer a cozy café corner serving coffee and bakery items, making it a place to relax, read, and connect with the community.</p>
+  <p>Simply Revived began as a small neighbourhood bookstore with a simple aim: to rekindle the love of reading and build a local place where people can connect over stories and coffee.</p>
+</section>
+
+<section>
+  <h3>Our History</h3>
+  <p>Founded in 2015 by two book lovers, Simply Revived started on a modest street corner with second-hand books, a few armchairs and a kettle on. Over time the shop found its voice — hosting local author evenings, supporting reading circles for kids, and becoming a comfortable place where students and remote workers stop by for a quiet hour.</p>
+
+  <h3>Mission</h3>
+  <p>To inspire a love of reading and nurture community by offering a carefully curated selection of books and a warm café space where conversations and ideas flourish.</p>
+
+  <h3>Vision</h3>
+  <p>To be the go-to neighbourhood bookstore and café that celebrates stories, supports local writers, and creates memorable moments for readers of all ages.</p>
+
+  <h3>Values</h3>
+  <ul>
+    <li><strong>Community:</strong> We host events and programs that bring people together.</li>
+    <li><strong>Accessibility:</strong> Books and events available to a wide and diverse audience.</li>
+    <li><strong>Sustainability:</strong> We favour used books, local suppliers and low-waste packaging.</li>
+    <li><strong>Curiosity:</strong> We champion new voices and diverse perspectives.</li>
+  </ul>
+
+  <h3>What We Offer</h3>
+  <p>Alongside our bookshop you’ll find a cosy café corner serving freshly brewed coffee and baked goods — perfect for reading, meeting friends, or working quietly. We stock fiction, non-fiction, children’s books, local authors and a rotating selection of staff picks.</p>
+
+  <h3>Community Programmes</h3>
+  <p>Simply Revived runs monthly reading circles, school outreach events, and author signings. We also have a small book-exchange shelf encouraging book-sharing among neighbours.</p>
+
+  <h3>Visit Us</h3>
+  <p>We’re located at 123 Book Street, Cape Town. Drop in for a browse, a chat, or a slice of cake — we’d love to meet you.</p>
 </section>
 
 <footer>
